--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -20,6 +20,9 @@ jobs:
             -   name: Connect to aws
                 uses: aws-actions/configure-aws-credentials@v1
                 with:
+                    aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                    aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                    aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
                     role-session-name: awssyncsession
                     role-to-assume: ${{ secrets.AWS_IAM_ROLE }}
                     aws-region: ${{ secrets.AWS_REGION }}
