--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -1,32 +1,28 @@
-name: S3 syc action
+name: S3 sync action
 
 on:
-    workflow_dispatch:
-    push:
-        branches:
-            - main
+  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 permissions:
-    id-token: write
-    contents: read
+  id-token: write
+  contents: read
 
 jobs:
-    sync:
-        runs-on: ubuntu-latest
-        steps:
-            -   name: Checkout Repository
-                uses: actions/checkout@v2
+  sync:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
-            -   name: Connect to aws
-                uses: aws-actions/configure-aws-credentials@v1
-                with:
-                    aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                    aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                    aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-                    role-session-name: awssyncsession
-                    role-to-assume: ${{ secrets.AWS_IAM_ROLE }}
-                    aws-region: ${{ secrets.AWS_REGION }}
-            
-            -   name: Sync with S3
-                run: aws s3 sync ./files/ s3://${{ secrets.AWS_BUCKET_NAME }} --delete                  
-        
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Sync with S3
+        run: aws s3 sync ./files/ s3://${{ secrets.AWS_BUCKET_NAME }} --delete ${{ secrets.AWS_PROFILE }}   
