--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -27,4 +27,4 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Sync with S3
-        run: aws s3 sync ./files/ s3://${{ secrets.AWS_BUCKET_NAME }} --delete   
+        run: aws s3 sync ./files/ s3://${{ secrets.AWS_BUCKET_NAME }}  
