--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -20,11 +20,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-          role-to-assume: ${{ secrets.AWS_IAM_ROLE }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          role-to-assume: arn:aws:iam::882692629600:role/rol-carlos-prueba
+          aws-region: us-east-1
 
       - name: Sync with S3
         run: aws s3 sync ./files/ s3://${{ secrets.AWS_BUCKET_NAME }}  
