--- a/.github/workflows/az-sync.yaml
+++ b/.github/workflows/az-sync.yaml
@@ -21,6 +21,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
             app-name: 'carlos-dominio-app-01'
-            slot-name: 'production'
+            # slot-name: 'production'
             publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-            package: '.'
+            # package: '.'
